force-app/main/default/objects/SAP_BI_Reports_Setting__c/SAP_BI_Reports_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for SAP BI Reports</description>
    <label>SAP BI Reports Setting</label>
</CustomObject>