force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Auth__c.field-meta.xml
<CustomField>
    <fullName>Auth__c</fullName>
    <label>Auth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>