force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Contract_Rebate_Expiry_Report__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rebate_Expiry_Report__c</fullName>
    <description>CUID of the Contract Rebate Expiry Report in SAP, as viewed in the General Properties. Each report that we need to open up via a link in salesforce needs its own field within this custom setting for a CUID.</description>
    <inlineHelpText>Contract Rebate Expiry Report in SAP, as viewed in the General Properties.</inlineHelpText>
    <label>Contract Rebate Expiry Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>