force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Cust_Dedicated_Inv_RepReport_CUID__c.field-meta.xml
<CustomField>
    <fullName>Cust_Dedicated_Inv_RepReport_CUID__c</fullName>
    <description>CUID of the  Customer Dedicated Inventory Sales Rep Detail Report in SAP, as viewed in the General Properties. Each report that we need to open up via a link in salesforce needs its own field within this custom setting for a CUID.</description>
    <inlineHelpText>CUID of the   Customer Dedicated Inventory Sales Rep Detail Report in SAP, as viewed in the General Properties.</inlineHelpText>
    <label>Cust Dedicated Inv - RepReport CUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>