force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <description>CUID of the Sales Rep Detail Report in SAP, as viewed in the General Properties. Each report that we need to open up via a link in salesforce needs its own field within this custom setting for a CUID.</description>
    <inlineHelpText>CUID of the Sales Rep Detail Report in SAP, as viewed in the General Properties.</inlineHelpText>
    <label>Daily Sales Rep Detail Report CUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>