force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Encoded_Token__c.field-meta.xml
<CustomField>
    <fullName>Encoded_Token__c</fullName>
    <description>Encoded Token from SAP</description>
    <label>Encoded Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>