force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Encoded_Token_Overflow__c.field-meta.xml
<CustomField>
    <fullName>Encoded_Token_Overflow__c</fullName>
    <description>This field exists as a backup field for the Encoded Token when its length exceeds 255.</description>
    <label>Encoded Token Overflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>