force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Green_Gauge_Report__c.field-meta.xml
<CustomField>
    <fullName>Green_Gauge_Report__c</fullName>
    <label>Green Gauge Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>