force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Monthly_Activity_Report_CUID__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Activity_Report_CUID__c</fullName>
    <description>CUID of the Veritiv Monthly Sales Report in SAP, as viewed in the General Properties.</description>
    <inlineHelpText>CUID of the Veritiv Monthly Sales Report in SAP, as viewed in the General Properties.</inlineHelpText>
    <label>Monthly Activity Report CUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>