force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/SAP_Login_Token__c.field-meta.xml
<CustomField>
    <fullName>SAP_Login_Token__c</fullName>
    <description>Login Token for SAP BI</description>
    <inlineHelpText>Login Token for SAP BI</inlineHelpText>
    <label>SAP Login Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>