force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/SAP_Login_Token_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>SAP_Login_Token_Last_Update__c</fullName>
    <description>Date and Time of Login Token last refresh</description>
    <inlineHelpText>Date and Time of Login Token last refresh</inlineHelpText>
    <label>SAP Login Token Last Update</label>
    <type>DateTime</type>
</CustomField>