force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/SAP_Report_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>SAP_Report_Base_URL__c</fullName>
    <description>Base URL for SAP BI Reports</description>
    <inlineHelpText>Base URL for SAP BI Reports</inlineHelpText>
    <label>SAP Report Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>