force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Total_AR_Incl_Past_Due_InvcDet_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Total_AR_Incl_Past_Due_InvcDet_Mgr__c</fullName>
    <description>A detail-level report that shows Account Receivable assigned to a sales representative for all the Sales Manager Level 3 direct reports. The report provides total amount outstanding, current and aging buckets by customer and the list of past due invoices with invoice details.</description>
    <inlineHelpText>CUID of the  AR Past Due incl Invc Details Manger Report in SAP, as viewed in the General Properties.</inlineHelpText>
    <label>Total AR Incl Past Due InvcDet-MgrCUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>