force-app/main/default/objects/SAP_BI_Reports_Setting__c/fields/Total_AR_incl_Past_Due_InvcDet_Rep__c.field-meta.xml
<CustomField>
    <fullName>Total_AR_incl_Past_Due_InvcDet_Rep__c</fullName>
    <description>A detail-level report that shows Account Receivable assigned to a sales representative. The report provides total amount outstanding, current and aging buckets by customer and the list of past due invoices with invoice details.</description>
    <inlineHelpText>CUID of the  Total AR Past Due incl Invc Details Rep Report in SAP, as viewed in the General Properties.</inlineHelpText>
    <label>Total AR incl Past Due InvcDet-RepCUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>